# OpenEnv_Email_Triage_Environment

./: Dockerfile  README.md  baseline.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validation.py
app/: main.py
env/: email_env.py  schemas.py  tasks.py
tests/: test_env.py  test_tasks.py
