[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-email-triage"
version = "0.1.0"
description = "OpenEnv-compliant email triage environment for AI agents"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "GitHub Copilot", email = "copilot@github.com"}
]
keywords = ["openenv", "email", "triage", "reinforcement-learning", "environment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi==0.113.0",
    "uvicorn[standard]==0.23.2",
    "pydantic==2.10.6",
    "openai==1.31.0",
    "pytest==7.4.2",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "python-dotenv>=1.0.0",
]

[project.scripts]
server = "app.main:app"

[tool.setuptools]
packages = ["app", "env"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
